include/astl/astl_telemetry.h


typedef struct _astl_platform_props_t {
  size_t      size;              
  uint32_t    flags;             
  const char* soc_name;          
  const char* vendor_id;         
  const char* os_name;           
  const char* kernel_name;       
  const char* kernel_version;    
  const char* kernel_release;    
  const char* firmware_version;  
  const char* hostname;          
  const char* architecture;      
} astl_platform_props_t;
typedef struct astl_get_system_info_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_platform_props_t* system_info;  
} astl_get_system_info_params_t;
typedef const void* astl_target_handle_t;  
typedef struct _astl_target_props_t {
  size_t               size;           
  astl_target_handle_t handle;         
  astl_target_handle_t parent_handle;  
  const char* name;                    
  const char* description;             
  const char* id;                      
} astl_target_props_t;
typedef struct astl_get_target_count_params_t {
  size_t    size;          
  uint32_t  flags;         
  uint32_t* target_count;  
} astl_get_target_count_params_t;
typedef struct astl_get_targets_params_t {
  size_t               size;     
  uint32_t             flags;    
  astl_target_props_t* targets;  
  uint32_t* target_count;        
} astl_get_targets_params_t;
typedef enum _astl_units_t {
  ASTL_UNITS_NONE    = 0,       
  ASTL_UNITS_TICKS   = 1,       
  ASTL_UNITS_SECONDS = 2,       
  ASTL_UNITS_CELSIUS = 3,       
  ASTL_UNITS_JOULES  = 4,       
  ASTL_UNITS_WATTS   = 5,       
  ASTL_UNITS_VOLTS        = 6,  
  ASTL_UNITS_AMPS         = 7,  
  ASTL_UNITS_BYTES        = 8,  
  ASTL_UNITS_MBYTESPERSEC = 9,  
  ASTL_UNITS_MHERTZ = 10,       
  ASTL_UNITS_UNKNOWN = 0xFFFFFFFF,  
} astl_units_t;
typedef enum _astl_value_type_t {
  ASTL_VALUE_UINT8   = 0,  
  ASTL_VALUE_UINT16  = 1,  
  ASTL_VALUE_UINT32  = 2,  
  ASTL_VALUE_UINT64  = 3,  
  ASTL_VALUE_FLOAT32 = 6,  
  ASTL_VALUE_FLOAT64 = 7,  
  ASTL_VALUE_BOOL8   = 8,  
  ASTL_VALUE_UNKNOWN = 0xFFFFFFFF,  
} astl_value_type_t;
typedef union _astl_value_t {
  uint8_t  ui8;   
  uint16_t ui16;  
  uint32_t ui32;  
  uint64_t ui64;  
  float    fp32;  
  double   fp64;  
  bool     b8;    
} astl_value_t;
typedef const void* astl_counter_handle_t;  
typedef enum _astl_counter_type_t {
  ASTL_COUNTER_TYPE_VALUE = 0,  
  ASTL_COUNTER_TYPE_COUNT = 1,  
  ASTL_COUNTER_TYPE_EVENT = 2,  
  ASTL_COUNTER_TYPE_UNKNOWN = 0xFFFFFFFF,  
} astl_counter_type_t;
typedef struct _astl_counter_props_t {
  size_t                size;         
  astl_counter_handle_t handle;       
  const char*           name;         
  const char*           description;  
  uint32_t              min_sampling_interval;  
  astl_units_t units;                           
  const char* formula;               
  astl_value_type_t value_type;      
  astl_counter_type_t counter_type;  
} astl_counter_props_t;
typedef struct astl_get_counter_count_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
  uint32_t*            counter_count;  
} astl_get_counter_count_params_t;
typedef struct astl_get_counters_params_t {
  size_t                size;   
  uint32_t              flags;  
  astl_target_handle_t  target_handle;  
  astl_counter_props_t* counters;       
  uint32_t* counter_count;  
} astl_get_counters_params_t;
typedef const void* astl_metric_handle_t;  
typedef enum _astl_metric_type_t {
  ASTL_METRIC_VALUE            = 0,  
  ASTL_METRIC_FINITE_SET_VALUE = 1,  
  ASTL_METRIC_EVENT = 2,             
  ASTL_METRIC_DELTA = 3,             
  ASTL_METRIC_RESIDENCY = 4,         
  ASTL_METRIC_RATE = 5,              
  ASTL_METRIC_UNKNOWN = 0xFFFFFFFF,  
} astl_metric_type_t;
typedef enum _astl_category_t {
  ASTL_CATEGORY_COUNT         = 0,          
  ASTL_CATEGORY_TEMPERATURE   = 1,          
  ASTL_CATEGORY_POWER         = 2,          
  ASTL_CATEGORY_FREQUENCY     = 3,          
  ASTL_CATEGORY_VOLTAGE       = 4,          
  ASTL_CATEGORY_CURRENT       = 5,          
  ASTL_CATEGORY_UNCATEGORIZED = 0xFFFFFFFF  
} astl_category_t;
typedef struct _astl_metric_props_t {
  size_t               size;         
  astl_metric_handle_t handle;       
  const char*          name;         
  const char*          description;  
  uint32_t             min_sampling_interval;  
  astl_units_t units;                          
  astl_value_type_t value_type;                
  astl_metric_type_t metric_type;              
  astl_category_t category;                    
} astl_metric_props_t;
typedef struct astl_get_metric_count_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
  uint32_t*            metric_count;   
} astl_get_metric_count_params_t;
typedef struct astl_get_metrics_params_t {
  size_t               size;   
  uint32_t             flags;  
  astl_target_handle_t target_handle;  
  astl_metric_props_t* metrics;        
  uint32_t* metric_count;              
} astl_get_metrics_params_t;
typedef struct _astl_state_props_t {
  size_t       size;         
  const char*  name;         
  const char*  description;  
  astl_value_t value;        
} astl_state_props_t;
typedef struct astl_get_metric_state_count_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  uint32_t*            state_count;    
} astl_get_metric_state_count_on_target_params_t;
typedef struct astl_get_metric_states_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  astl_state_props_t*  states;         
  uint32_t* state_count;               
} astl_get_metric_states_on_target_params_t;
typedef const void* astl_metric_group_handle_t;  
typedef struct _astl_metric_group_props_t {
  size_t size;  
  astl_metric_group_handle_t handle;        
  const char*                name;          
  const char*                description;   
  uint32_t                   metric_count;  
  astl_metric_props_t* metrics;             
} astl_metric_group_props_t;
typedef struct astl_get_metric_group_count_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;       
  uint32_t*            metric_group_count;  
} astl_get_metric_group_count_params_t;
typedef struct astl_get_metric_groups_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t       target_handle;  
  astl_metric_group_props_t* metric_groups;  
  uint32_t* metric_group_count;  
} astl_get_metric_groups_params_t;
typedef struct astl_get_metric_group_metrics_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t             target_handle;  
  const astl_metric_group_props_t* metric_group;   
  astl_metric_props_t* metrics;                    
} astl_get_metric_group_metrics_params_t;
typedef enum _astl_collection_mode_t {
  ASTL_COLLECTION_MODE_SAMPLING  = 0,  
  ASTL_COLLECTION_MODE_IMMEDIATE = 1,  
  ASTL_COLLECTION_MODE_SNAPSHOT = 2,   
} astl_collection_mode_t;
typedef enum _astl_collection_parameters_flags_t {
  ASTL_COLLECTION_PARAMETERS_FLAG_NONE                  = 0U,         
  ASTL_COLLECTION_PARAMETERS_FLAG_OPTIMIZE_OVERHEAD     = (1U << 0),  
  ASTL_COLLECTION_PARAMETERS_FLAG_OPTIMIZE_MEMORY       = (1U << 1),  
  ASTL_COLLECTION_PARAMETERS_FLAG_OPTIMIZE_INTERFERENCE = (1U << 2),  
} astl_collection_parameters_flags_t;
typedef struct _astl_collection_params_t {
  size_t   size;               
  uint32_t flags;              
  uint32_t sampling_interval;  
  astl_collection_mode_t collection_mode;  
} astl_collection_params_t;
typedef struct astl_configure_counter_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  const astl_collection_params_t*
      collection_params;                         
  const astl_counter_handle_t* counter_handles;  
  uint32_t                     counter_count;    
} astl_configure_counter_collection_on_target_params_t;
typedef struct astl_configure_metric_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  const astl_collection_params_t*
      collection_params;                       
  const astl_metric_handle_t* metric_handles;  
  uint32_t                    metric_count;    
} astl_configure_metric_collection_on_target_params_t;
typedef struct astl_configure_metric_group_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  const astl_collection_params_t*
      collection_params;  
  const astl_metric_group_handle_t* metric_group_handles;  
  uint32_t                          metric_group_count;    
} astl_configure_metric_group_collection_on_target_params_t;
typedef struct astl_read_immediate_on_target_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
} astl_read_immediate_on_target_params_t;
typedef struct astl_read_immediate_params_t {
  size_t   size;   
  uint32_t flags;  
} astl_read_immediate_params_t;
typedef struct astl_save_params_t {
  size_t      size;              
  uint32_t    flags;             
  const char* output_file_path;  
} astl_save_params_t;
typedef struct astl_load_params_t {
  size_t      size;              
  uint32_t    flags;             
  const char* input_file_path;   
  size_t      chunk_size_bytes;  
} astl_load_params_t;