include/astl/astl_errors.h


typedef enum _astl_status_code {
  ASTL_STATUS_SUCCESS                              = 0,    
  ASTL_STATUS_BAD_ARGUMENT                         = 1,    
  ASTL_STATUS_BAD_CONFIGURATION                    = 2,    
  ASTL_STATUS_INVALID_TARGET_HANDLE                = 3,    
  ASTL_STATUS_INVALID_COUNTER_HANDLE               = 4,    
  ASTL_STATUS_INVALID_METRIC_HANDLE                = 5,    
  ASTL_STATUS_INVALID_METRIC_GROUP_HANDLE          = 6,    
  ASTL_STATUS_NOT_IMPLEMENTED                      = 7,    
  ASTL_STATUS_NOT_SUPPORTED                        = 8,    
  ASTL_STATUS_DEPRECATED_API                       = 9,    
  ASTL_STATUS_NO_TARGETS_FOUND                     = 10,   
  ASTL_STATUS_OLD_TARGET_PROPERTIES_STRUCT_VERSION = 11,   
  ASTL_STATUS_NEW_TARGET_PROPERTIES_STRUCT_VERSION = 12,   
  ASTL_STATUS_NO_COUNTERS_FOUND                     = 13,  
  ASTL_STATUS_OLD_COUNTER_PROPERTIES_STRUCT_VERSION = 14,  
  ASTL_STATUS_NEW_COUNTER_PROPERTIES_STRUCT_VERSION = 15,  
  ASTL_STATUS_OLD_COUNTER_SAMPLE_STRUCT_VERSION = 16,      
  ASTL_STATUS_NEW_COUNTER_SAMPLE_STRUCT_VERSION = 17,      
  ASTL_STATUS_NO_METRICS_FOUND                     = 18,   
  ASTL_STATUS_OLD_METRIC_PROPERTIES_STRUCT_VERSION = 19,   
  ASTL_STATUS_NEW_METRIC_PROPERTIES_STRUCT_VERSION = 20,   
  ASTL_STATUS_OLD_METRIC_SAMPLE_STRUCT_VERSION = 21,       
  ASTL_STATUS_NEW_METRIC_SAMPLE_STRUCT_VERSION = 22,       
  ASTL_STATUS_NO_METRIC_GROUPS_FOUND = 23,                 
  ASTL_STATUS_OLD_METRIC_GROUP_PROPERTIES_STRUCT_VERSION =
      24,  
  ASTL_STATUS_NEW_METRIC_GROUP_PROPERTIES_STRUCT_VERSION =
      25,                                                     
  ASTL_STATUS_OLD_COLLECTION_PARAMETERS_STRUCT_VERSION = 26,  
  ASTL_STATUS_NEW_COLLECTION_PARAMETERS_STRUCT_VERSION = 27,  
  ASTL_STATUS_TARGET_PROPERTIES_BUFFER_TOO_SMALL = 28,        
  ASTL_STATUS_COUNTER_PROPERTIES_BUFFER_TOO_SMALL = 29,       
  ASTL_STATUS_METRIC_PROPERTIES_BUFFER_TOO_SMALL = 30,        
  ASTL_STATUS_METRIC_GROUP_PROPERTIES_BUFFER_TOO_SMALL = 31,  
  ASTL_STATUS_COUNTER_SAMPLES_BUFFER_TOO_SMALL = 32,          
  ASTL_STATUS_METRIC_SAMPLES_BUFFER_TOO_SMALL = 33,           
  ASTL_STATUS_SAMPLIMG_INTERVAL_TOO_SMALL = 34,               
  ASTL_STATUS_SAMPLING_INTERVAL_TOO_LARGE = 35,               
  ASTL_STATUS_SAMPLING_INTERVAL_IGNORED   = 36,               
  ASTL_STATUS_INVALID_COLLECTION_MODE              = 37,      
  ASTL_STATUS_INVALID_COLLECTION_OPTIMIZATION      = 38,      
  ASTL_STATUS_COUNTER_NOT_SUPPORTED_ON_TARGET      = 39,      
  ASTL_STATUS_METRIC_NOT_SUPPORTED_ON_TARGET       = 40,      
  ASTL_STATUS_METRIC_GROUP_NOT_SUPPORTED_ON_TARGET = 41,      
  ASTL_STATUS_COLLECTION_NOT_CONFIGURED            = 42,  
  ASTL_STATUS_COLLECTION_NOT_RUNNING               = 43,  
  ASTL_STATUS_COLLECTION_NOT_STOPPED = 44,                
  ASTL_STATUS_COLLECTION_NOT_PAUSED = 45,                 
  ASTL_STATUS_COLLECTION_ALREADY_RUNNING = 46,            
  ASTL_STATUS_COLLECTION_ALREADY_STOPPED = 47,            
  ASTL_STATUS_COLLECTION_ALREADY_PAUSED = 48,             
  ASTL_STATUS_NO_DATA_COLLECTED = 49,                     
  ASTL_STATUS_BUFFER_LARGER_THAN_NEEDED = 50,             
  ASTL_STATUS_FILE_OPEN_FAILED = 51,  
  ASTL_STATUS_FILE_ERROR       = 52,  
  ASTL_STATUS_OUT_OF_MEMORY    = 53,  
  ASTL_STATUS_INTERNAL_ERROR = 200,         
  ASTL_STATUS_UNKNOWN_ERROR  = 0xFFFFFFFF,  
} astl_status_code;
ASTL_API const char* astlStatusString(astl_status_code status);